# quant-portfolio

./: .gitignore  README.md  pyproject.toml  requirements.txt
project01_microstructure_alpha/: README.md
project01_microstructure_alpha/reports/: project1_microstructure_memo.md  project1_multiday_stability.csv
project01_microstructure_alpha/scripts/: 01_download_data.py  04_backtest.py
project02_market_making/: README.md
project02_market_making/reports/: project2_memo.md  sim_mm_inventory_skew.csv  sim_mm_sweep.csv  sim_mm_trade_metrics.csv
project02_market_making/scripts/: 01_simulate_mm.py
reports/: pnl_10s_highgate.csv  pnl_10s_nogate.csv  pnl_30s_finalpolicy_2024-01-01_2024-01-15.csv  pnl_30s_highgate.csv  pnl_30s_hold180.csv  pnl_30s_hold90_thr60.csv  pnl_30s_hold90_thr62.csv  pnl_30s_hold90_thr65.csv  pnl_30s_nogate.csv  pnl_30s_thr62.csv  pnl_30s_thr65.csv  project1_latency_sweep.csv  project1_model_oos.csv  project1_multiday_pnl.csv  project1_research_memo.md
scripts/: 01_download_data.py  02_ingest_range.py  03_build_features_range.py  04_backtest.py  05_eval_stability.py  06_backtest_range.py  07_resample_bars_range.py  08_build_features_targets_resampled_range.py  09_backtest_resampled_range.py  10_generate_project1_figures.py  _bootstrap.py
src/: config.py
src/backtest/: costs.py  engine.py
src/data/: ingest.py  quality.py
src/evaluation/: metrics.py
src/features/: build_features.py  orderbook.py  trades.py
src/modeling/: cv.py  predict.py  targets.py  train.py
