[project]
name = "quant-portfolio"
version = "0.1.0"
description = "Masters-level quant research portfolio (time-series aware, execution-aware, reproducible)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Karthik" }]
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
src = ["src", "scripts", "tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
